Wire all JS, fix decimal places bugs, fix overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,3 @@ button {
 button.top {
     width: 110px;
 }
-
-.bruh {
-    background-color: red;
-}
